I appear to have fixed the offset issue that appears on pages with y-axis scrollbars by adding a margin to the right of the document with a calculation. The calculation into account the width in percentage (which does not include the scroll bar as part of the width) and 100vw (which does include the scrollbar) which creates a negative margin on the html element when the scrollbar is added. Margin is used over padding here as extra padding could affect the pages layout

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 html {
-  overflow-y: scroll;
+  margin-right: calc(100% - 100vw);
 }
 
 body {
@@ -29,8 +29,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  border-left: 1px solid var(--h1-color);
-  border-right: 1px solid var(--h1-color);
 }
 
 /* Header */
